--- a/src/assets/data/appconfig.json
+++ b/src/assets/data/appconfig.json
@@ -4,6 +4,5 @@
   "defaultLanguage": "pt",
   "footerText": "CAIXA ECONÔMICA FEDERAL - CNPJ 00.360.305/0001-04. SBS QUADRA 4 LT 3/4, ASA SUL - CEP 70.070-140 BRASILIA - DF",
   "sisenseBasePath": "http://dadnpaplnt005.intra.caixa.gov.br:9091/app/main#/dashboards/",
-  "headerColor": "##004F9F",
-  "defaultImage": "../../assets/Images/Item_Images/default.png"
+  "headerColor": "#004F9F"
 }
