--- a/src/assets/data/appconfig.json
+++ b/src/assets/data/appconfig.json
@@ -5,11 +5,11 @@
   "sisenseBasePath": [
     {
       "base": "005",
-      "path": "http://dadnpaplnt005.intra.caixa.gov.br:9091/app/main#/dashboards/"
+      "path": "http://dadnpaplnt005.intra.caixa.gov.br:9091/app/main#/dashboards"
     },
     {
       "base": "006",
-      "path": "https://10.221.70.14:9091/app/main#/dashboards/"
+      "path": "https://10.221.70.14:9091/app/main#/dashboards"
     }
   ]
 }
